# libresample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson.options
src/: CMakeLists.txt  config.h.in  filterkit.c  resample.def  resample_defs.h
tests/: meson.build  testresample.c
